# cvxtract

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cvxtract.pyi  pyproject.toml
.github/workflows/: publish-pypi.yml  release.yml
src/: lib.rs  main.rs  python.rs
src/core/: mod.rs  model.rs  unstructured.rs
src/core/extractor/: error.rs  mod.rs  resume.rs  schema.rs
src/core/loaders/: docx.rs  html.rs  mod.rs  pdf.rs  text.rs
src/core/providers/: config.rs  copilot.rs  local.rs  mod.rs  openai.rs  schema.rs
